# drones_labs

./: obstacles  setup_env.txt
drone_msgs/: CMakeLists.txt  README.md  package.xml
drone_msgs/msg/: Diagnostics.msg  DroneInfo.msg  DroneInfoArray.msg  DronePose.msg  Goal.msg  LocalPlannerState.msg  RoomParams.msg  Strike.msg  WindowAngleDir.msg  WindowPointDir.msg
drone_sim/: CMakeLists.txt  package.xml
drone_sim/include/: fixed_joint.urdf
drone_sim/launch/: fixed.launch  forest_sim.launch  octomap.launch  sim.launch
drone_sim/models/collum/: model.config  model.sdf
drone_sim/models/fpv_cam_new/: fpv_cam_new.sdf  model.config
drone_sim/models/fractal_marker/: model.config  model.sdf
drone_sim/models/fractal_marker/materials/scripts/: aruco_marker.material
drone_sim/models/iris_rplidar/: iris_rplidar.sdf  model.config
drone_sim/models/rover_new/: model.config  rover_new.sdf
drone_sim/scripts/: obstacles_list_node.py
drone_sim/worlds/: forest.world  landing.world
ground_control/: CMakeLists.txt  README.md  package.xml
ground_control/launch/: ground_control.launch
ground_control/rviz/: gloabal_planner.rviz  slam.rviz
ground_control/scripts/: swarm_visualization.py
interactive_goal/: CMakeLists.txt  package.xml
interactive_goal/launch/: marker_server.launch
interactive_goal/src/: goal_pose_zigzag.py  interactive_goal.cpp  interactive_posestamped.cpp
